fix subheading inconsistency, re-align hamburger menu, minor tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -35,14 +35,15 @@ img {
 
 .flex-box > .side-bar {
   color: rgba(128, 128, 128, 1);
+  flex-shrink: 1;
   order: -1;
   width: 12%;
   height: 95%;
 }
 
 .flex-box > .side-bar > .color-stack {
-  margin-top: 170px;
-  margin-left: 90px;
+  flex-shrink: 1;
+  padding: 70px 0 0 85px;
 }
 
 .flex-box > .side-bar > .color-stack > .color-tiles {
@@ -79,14 +80,16 @@ img {
     background-color: #fff;
     cursor: pointer;
     padding: 16px;
+    margin-top: 50px;
+    margin-left: 60px;
 }
 
 .flex-box > .side-bar .hamburger-icon span {
   background: #000;
   display: block;
-  width: 30px;
-  height: 5px;
-  margin: 3px 0;
+  width: 60px;
+  height: 10px;
+  margin: 5px 0;
 }
 
 .flex-box > .side-bar .dropdown {
@@ -98,6 +101,7 @@ img {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
+    margin-left: 40px;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -183,7 +187,7 @@ img {
   text-transform: uppercase;
 }
 
-.flex-box > .content > .doc-header > .title-text > h2 {
+.flex-box > .content > .doc-header > .title-text > p {
   font-size: 30px;
   font-weight: 300;
   text-shadow: 2px 2px rgba(184, 184, 184, 1);
