--- a/css/small.css
+++ b/css/small.css
@@ -1,5 +1,13 @@
 /* -------------------------------------------------------------------------- */
 
+/* flex-box */
+
+.flex-box {
+  width: 100%;
+}
+
+/* -------------------------------------------------------------------------- */
+
 /* side-bar */
 
 .flex-box > .side-bar {
@@ -7,8 +15,7 @@
 }
 
 .flex-box > .side-bar > .color-stack {
-  margin-top: 95%;
-  margin-left: 20px;
+  padding: 30px 0 0 10px;
   text-align: center;
 }
 
@@ -25,6 +32,26 @@
 .flex-box > .side-bar > .color-stack > .color-tiles > li > .hex-value:hover {
   font-size: 12px;
   text-decoration: none;
+}
+
+/* -------------------------------------------------------------------------- */
+/* Hamburger Menu */
+/* -------------------------------------------------------------------------- */
+
+.flex-box > .side-bar .hamburger-icon {
+  padding: 12px;
+  margin-top: 35px;
+  margin-left: 0;
+}
+
+.flex-box > .side-bar .hamburger-icon span {
+  width: 40px;
+  height: 8px;
+  margin: 4px 0;
+}
+
+.flex-box > .side-bar .dropdown-content {
+  margin-left: 0;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -64,7 +91,7 @@
   text-shadow: 1px 1px rgba(184, 184, 184, 1);
 }
 
-.flex-box > .content > .doc-header > .title-text > h2 {
+.flex-box > .content > .doc-header > .title-text > p {
   font-size: 10px;
   font-weight: bold;
   text-shadow: 1px 1px rgba(184, 184, 184, 1);
